--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lint:ts:fix": "eslint '**/*.{ts,tsx}' --fix",
     "lint:css": "npx stylelint '**/*.scss'",
     "lint:css:fix": "npx stylelint '**/*.scss' --fix",
-    "unit": "jest --config ./config/jest/jest.config.ts",
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "test:ui": "yarn loki test",
+    "test:ui:ok": "yarn loki approve",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
-    "build-storybook": "storybook build -c ./config/storybook"
+    "storybook:build": "storybook build -c ./config/storybook"
   },
   "repository": {
     "type": "git",
