--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,22 +9,24 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 18.x ]
+        node-version: [ 17.x ]
+
     steps:
       - uses: actions/checkout@v2
-      - name: Starting Node.js ${{matrix.node-version}}
+      - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{matrix.node-version}}
-      - name: Install Yarn
-        run: npm install -g yarn
+          node-version: ${{ matrix.node-version }}
       - name: install modules
-        run: yarn install
+        run: npm install
       - name: build production project
-        run: yarn build:prod
+        run: npm run build:prod
+        if: always()
       - name: linting typescript
-        run: yarn lint:ts
+        run: npm run lint:ts
+        if: always()
       - name: linting css
-        run: yarn lint:css
+        run: npm run lint:scss
       - name: unit testing
-        run: yarn test:unit
+        if: always()
+        run: npm run test:unit
