--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,15 +18,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: install modules
-        run: npm install
+        run: yarn
       - name: build production project
-        run: npm run build:prod
+        run: yarn build:prod
         if: always()
       - name: linting typescript
-        run: npm run lint:ts
+        run: yarn lint:ts
         if: always()
       - name: linting css
-        run: npm run lint:scss
+        run: yarn lint:scss
       - name: unit testing
         if: always()
-        run: npm run test:unit
+        run: yarn test:unit
