--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: yarn lint:ts
         if: always()
       - name: linting css
-        run: yarn lint:scss
+        run: yarn lint:css
       - name: unit testing
         if: always()
         run: yarn test:unit
