--- a/package.json
+++ b/package.json
@@ -98,7 +98,9 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-router-dom": "^6.2.1",
-    "reg-cli": "0.17.6"
+    "reg-cli": "0.17.6",
+    "@reduxjs/toolkit": "^1.8.0",
+    "react-redux": "^7.2.6"
   },
   "loki": {
     "configurations": {
