--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,32 @@
-name: linting, testing, building
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-jobs:
-  pipeline:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [ 18.x ]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Staring Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: install modules
-        run: yarn
-      - name: build production project
-        run: yarn build:prod
-        if: always()
-      - name: linting typescript
-        run: yarn lint:ts
-        if: always()
-      - name: linting css
-        run: yarn lint:css
-      - name: unit testing
-        if: always()
-        run: yarn test:unit
+#name: linting, testing, building
+#on:
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
+#jobs:
+#  pipeline:
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        node-version: [ 18.x ]
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Staring Node.js ${{ matrix.node-version }}
+#        uses: actions/setup-node@v1
+#        with:
+#          node-version: ${{ matrix.node-version }}
+#      - name: install modules
+#        run: yarn
+#      - name: build production project
+#        run: yarn build:prod
+#        if: always()
+#      - name: linting typescript
+#        run: yarn lint:ts
+#        if: always()
+#      - name: linting css
+#        run: yarn lint:css
+#      - name: unit testing
+#        if: always()
+#        run: yarn test:unit
